# xyz

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.py
examples/: dot.zsh_history  file2hex.sh  mlir_erase_transform.mlir  npy2hpp.sh  npy_generater.sh  split_string.txt  string_splitter.sh  zsh_history_clean.sh
examples/data/: example.mlir
src/xyz/cl2hpp/: main.py
src/xyz/csvhex2file/: main.py
src/xyz/file2hex/: main.py
src/xyz/file2qr/: main.py
src/xyz/hex2file/: main.py
src/xyz/llvmir_dump_classifier/: main.py
src/xyz/mlir_erase_transform/: main.py
src/xyz/mlir_prettier/: README.md  main.py
src/xyz/npy2hpp/: main.py
src/xyz/npy_generater/: main.py
src/xyz/qr2file/: main.py
src/xyz/split_string/: main.py
src/xyz/string_splitter/: __init__.py  main.py
src/xyz/zsh_history_clean/: main.py
