# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
[project]
name = "xyz"
description = "mini cli toolkit."
readme = "README.md"
authors = [{ name = "Allen Guo", email = "guosonglin001@gmail.com" }]
license = { text = "MIT License" }
# only targeting to recent python versions
requires-python = ">=3.10"
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/gglin001/xyz"

# TODO: support bash/zsh completion
[project.scripts]
"xyz.mlir_prettier" = "xyz.mlir_prettier:cli"
"xyz.cl2hpp" = "xyz.cl2hpp:cli"
"xyz.file2hex" = "xyz.file2hex:cli"
"xyz.hex2file" = "xyz.hex2file:cli"
"xyz.file2qr" = "xyz.file2qr:cli"
"xyz.qr2file" = "xyz.qr2file:cli"
"xyz.csvhex2file" = "xyz.csvhex2file:cli"
"xyz.npy_generater" = "xyz.npy_generater:cli"
"xyz.npy2hpp" = "xyz.npy2hpp:cli"
"xyz.zsh_history_clean" = "xyz.zsh_history_clean:cli"
"xyz.string_splitter" = "xyz.string_splitter:cli"
"xyz.llvmir_dump_classifier" = "xyz.llvmir_dump_classifier:cli"

# https://github.com/pypa/setuptools_scm
[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/xyz/_version.py"

# https://docs.astral.sh/ruff/settings/
# https://docs.astral.sh/ruff/rules/
# https://docs.astral.sh/ruff/configuration/
[tool.ruff]
fix = true

[tool.ruff.lint]
select = ["I", "E", "F"]
ignore = []

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.isort]
known-local-folder = ["src"]
required-imports = ["from __future__ import annotations"]

# https://mypy.readthedocs.io/en/stable/config_file.html
[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
exclude = ["setup.py"]
files = ["src/**/*.py"]
